[tool.poetry]
name = "us_census_visualization"
version = "0.1.0"
description = "Python package that provides visualizations and metadata from  the US Census API"
authors = ["Pooja <pvp2108@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
